# FlappyTools2

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  setup.bat
scripts/: build.js  build_project.js  compile.js  compile_dir.js  config.json  config.list  flappy.bat  flappy.js  flappy.sh  flappy_args.js  flappy_build.js  flappy_debug.bat  flappy_gen.js  flappy_gen_res.js  flappy_init.js  flappy_pack_res.js  gen.js  gen_res.js  gen_target.js  generate.js  generate_js.js  generate_project.js  generate_resources.js  init.js  logger.js  merge_config.js  modules.js  pack_res.js  pack_resources.js  package.json  parse_json.js  print_build_config.js  print_config.js  print_context.js  print_scripts.js  res_utils.js  target_utils.js  test.json  test.template  test.template.js  (+3 more)
scripts/cmake/: CMakeList.txt  cmake_target_generator.js
scripts/cmake/cmake/: CMakeLists.txt
scripts/cmake/flappy_conf/: general.json
scripts/cpp/: init_cpp_project.js
scripts/cpp/template/flappy_conf/: general.json
scripts/scripts/: build.js  gen.js  gen_res.js  gen_target.js  init.js  pack_res.js
scripts/tests/: test.sh
scripts/tests/test_project/flappy_conf/: general.json
scripts/xcode/: xcode_target_generator.js
templates/cmake/: default.json  default_submodule.json  generator.js
templates/cmake/cmake/: CMakeLists.txt
templates/cmake/cmake_module/: CMakeLists.txt
templates/cmake/cmake_project/: CMakeList.txt  CMakeLists.txt
templates/flappy-2d/: generator.js
templates/flappy-2d/template/: .gitignore
templates/flappy-2d/template/flappy_conf/: general.json
templates/flappy-2d/template/src/: main.cpp
tests/: config.json  test.template  test1.json
tests/test_project/flappy_conf/: general.json
tests/test_project/modules/FlappyEngine/flappy_conf/: general.json
